--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 .navbar {
-  height: 20vh;
+  height: 10vh;
   background: white;
   display: flex;
   justify-content: center;
@@ -20,9 +20,8 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  height: 10rem;
-  width: 10rem;
-  border: 0.3rem solid black;
+  height: 2.7rem;
+  width: 2.7rem;
 }
 
 .hamburger .row {
@@ -31,6 +30,7 @@ html {
 }
 
 .hamburger .line {
-  padding: 0.5rem;
-  background: black;
+  height: 0.5rem;
+  width: 0.5rem;
+  background: rgb(114, 114, 114);
 }
