--- a/style.css
+++ b/style.css
@@ -8,12 +8,18 @@ html {
   font-size: 62.5%;
 }
 
+/* NAVBAR SECTION*/
+
 .navbar {
-  height: 10vh;
   background: white;
+}
+
+nav {
+  height: 10vh;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+  padding: 1rem;
 }
 
 .hamburger {
@@ -33,4 +39,13 @@ html {
   height: 0.5rem;
   width: 0.5rem;
   background: rgb(114, 114, 114);
+}
+
+.profile-picture {
+  padding-left: 1.5rem;
+}
+
+.profile-picture img {
+  width: 3rem;
+  height: 3rem;
 }
