--- a/style.css
+++ b/style.css
@@ -83,19 +83,73 @@ nav ul a:hover {
 
 .google-frontpage {
   min-height: 95vh;
+  display: flex;
+  justify-content: center;
+}
+
+.google-header {
+  padding-top: 10.9rem;
 }
 
 form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 25%;
+}
+.logo {
+  display: flex;
+  justify-content: center;
+}
+.search-bar {
+  margin-top: 3rem;
+  display: flex;
   align-items: center;
 }
 
-svg {
-  height: 2rem;
-  width: 2rem;
+.search-bar input {
+  height: 3.5rem;
+  width: 50rem;
+}
+
+.magnifying-glass {
+  height: 0;
+}
+
+.magnifying-glass svg {
+  height: 2.4rem;
+  width: 2.4rem;
 }
 
 .microphone-icon img {
   height: 2.4rem;
   width: 2.4rem;
 }
+
+.input-buttons {
+  padding: 2rem;
+}
+
+label {
+  position: relative;
+}
+
+label:before {
+  content: "";
+  position: absolute;
+  left: -2rem;
+  top: 0;
+  transform: translateY(50%);
+  width: 2rem;
+  height: 2rem;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 25 25' fill='rgb(154, 160, 166)' fill-rule='evenodd' %3E%3Cpath d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'%3E%3C/path%3E%3C/svg%3E")
+    center / contain no-repeat;
+}
+
+/*
+<svg xmlns="http://www.w3.org/2000/svg">
+<path
+  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+></path>
+</svg>
+*/
