--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ nav ul a:hover {
 }
 
 .google-header {
-  padding-top: 10.9rem;
+  padding-top: 13rem;
 }
 
 form {
@@ -105,38 +105,36 @@ form {
 }
 
 form .search-bar {
-  border: 0.15rem solid #eeeeee;
+  border: 0.1rem solid #dfe1e5;
   border-radius: 5rem;
-  margin-top: 3rem;
+  margin-top: 2.9rem;
   display: flex;
   align-items: center;
+}
+
+form .search-bar:hover {
+  box-shadow: 0 0.1rem 0.6rem 0 rgba(32, 33, 36, 0.28);
+  border-color: rgba(223, 225, 229, 0);
 }
 
 .search-bar input {
   border: none;
   outline: none;
-  height: 4.4rem;
-  width: 50rem;
+  height: 4.2rem;
+  width: 40rem;
+  margin-top: 0.1rem;
   margin-bottom: 0.1rem;
   margin-left: 4rem;
   font-size: 1.6rem;
 }
 
-form .magnifying-glass {
-  height: 0;
-}
-
-.magnifying-glass svg {
-  height: 2.4rem;
-  width: 2.4rem;
-}
 .microphone-icon {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 4.4rem;
   width: 4rem;
-  padding-right: 1rem;
+  padding-right: 1.5rem;
 }
 
 .microphone-icon img {
@@ -145,7 +143,31 @@ form .magnifying-glass {
 }
 
 form .input-buttons {
-  padding: 2rem;
+  padding: 1.8rem 0rem;
+}
+
+.input-buttons input {
+  background-color: #f2f2f2;
+  border: 0.1rem solid #f2f2f2;
+  border-radius: 4px;
+  color: #5f6368;
+  font-family: arial, sans-serif;
+  font-size: 1.4rem;
+  margin: 1.1rem 0.4rem;
+  padding: 0 1.6rem;
+  line-height: 2.7rem;
+  height: 3.6rem;
+  min-width: 5.4rem;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+}
+
+.input-buttons input:hover {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  background-color: #f8f8f8;
+  border: 1px solid #c6c6c6;
+  color: #222;
 }
 
 form label {
@@ -156,12 +178,27 @@ label:before {
   content: "";
   position: absolute;
   top: 50%;
-  left: 2%;
+  left: 3%;
   transform: translateY(-50%);
   width: 2rem;
   height: 2rem;
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 25 25' fill='rgb(154, 160, 166)' fill-rule='evenodd' %3E%3Cpath d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'%3E%3C/path%3E%3C/svg%3E")
     center / contain no-repeat;
+}
+
+form .language-option {
+  font-family: Arial, sans-serif;
+  font-size: 1.3rem;
+  color: #222222;
+}
+
+.language-option a:hover {
+  text-decoration: underline;
+}
+
+.language-option a {
+  color: #1a0dab;
+  cursor: pointer;
 }
 
 /*
