--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ nav ul a:hover {
 /* GOOGLE FRONTPAGE SECTION */
 
 .google-frontpage {
-  min-height: 95vh;
+  min-height: 89vh;
   display: flex;
   justify-content: center;
 }
@@ -201,10 +201,58 @@ form .language-option {
   cursor: pointer;
 }
 
-/*
-<svg xmlns="http://www.w3.org/2000/svg">
-<path
-  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
-></path>
-</svg>
-*/
+/* FOOTER SECTION*/
+
+footer {
+  min-height: 6vh;
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid #e4e4e4;
+  background: #f2f2f2;
+}
+
+.display-language-border {
+  border-bottom: 1px solid #e4e4e4;
+  display: flex;
+  align-items: center;
+  flex: 1 1 1rem;
+  font-size: 1.5rem;
+  font-family: Arial, sans-serif;
+}
+
+.display-language {
+  margin-left: 3rem;
+  color: rgba(0, 0, 0, 0.55);
+}
+
+.display-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1 1 1rem;
+  font-size: 1.4rem;
+  font-family: Arial, sans-serif;
+  line-height: 4rem;
+}
+
+.display-links a {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.display-links a:hover {
+  text-decoration: underline;
+}
+
+.left-content {
+  margin-left: 3rem;
+  display: flex;
+  justify-content: space-between;
+  width: 36rem;
+}
+
+.right-content {
+  margin-right: 3rem;
+  display: flex;
+  width: 19rem;
+  justify-content: space-between;
+}
