--- a/style.css
+++ b/style.css
@@ -212,13 +212,15 @@ footer {
   flex-direction: column;
   border-top: 1px solid #e4e4e4;
   background: #f2f2f2;
+  position: sticky;
+  bottom: 0;
 }
 
 .display-language-border {
   border-bottom: 1px solid #e4e4e4;
   display: flex;
   align-items: center;
-  flex: 1 1 1rem;
+  flex: 1 1 3.5rem;
   font-size: 1.5rem;
   font-family: Arial, sans-serif;
 }
@@ -230,9 +232,10 @@ footer {
 
 .display-links {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  flex: 1 1 1rem;
+  flex: 1 1 3.5rem;
   font-size: 1.4rem;
   font-family: Arial, sans-serif;
   line-height: 4rem;
@@ -246,16 +249,45 @@ footer {
   text-decoration: underline;
 }
 
-.left-content {
-  margin-left: 3rem;
+.content {
   display: flex;
   justify-content: space-between;
+}
+
+.left-display-links {
+  display: flex;
+  flex: 1 1 30rem;
+}
+
+.right-display-links {
+  display: flex;
+  justify-content: flex-end;
+  flex: 1 1 30rem;
+}
+
+.left-content {
+  margin: 0 3rem;
   width: 36rem;
 }
 
 .right-content {
-  margin-right: 3rem;
-  display: flex;
+  margin: 0 3rem;
   width: 19rem;
-  justify-content: space-between;
+}
+
+@media screen and (max-width: 719px) {
+  .left-display-links {
+    justify-content: space-evenly;
+    order: 2;
+  }
+  .right-display-links {
+    justify-content: center;
+    order: 1;
+  }
+
+  .left-content {
+  }
+
+  .right-content {
+  }
 }
